pkg/lang/testdata/ub/stack-values/invalid/locals-call.ub
locals: { encoded: @core.b64-encode('hello') }
